[project]
name = "sunsetrollercoaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "ua-generator>=2.0.17",
]
