[package]
name = "taipower"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "serde_json", "sqlx-postgres", "with-json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
